deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel3
  labels:
    app: sentinel3
    istio-injection: enabled
